--- a/cdk/.eslintrc.json
+++ b/cdk/.eslintrc.json
@@ -7,7 +7,8 @@
   "plugins": [
     "@typescript-eslint",
     "import",
-    "prettier"
+    "prettier",
+    "@stylistic"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -28,7 +29,13 @@
     },
     "import/resolver": {
       "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx", ".d.ts"]
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".ts",
+          ".tsx",
+          ".d.ts"
+        ]
       },
       "typescript": {
         "project": "**/tsconfig.json",
@@ -49,7 +56,7 @@
     "indent": [
       "off"
     ],
-    "@typescript-eslint/indent": [
+    "@stylistic/indent": [
       "error",
       2
     ],
@@ -120,13 +127,8 @@
       "multi-line",
       "consistent"
     ],
-    "@typescript-eslint/member-delimiter-style": [
-      "error"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ],
+    "@stylistic/member-delimiter-style": "error",
+    "@stylistic/semi": "error",
     "max-len": [
       "error",
       {
@@ -176,27 +178,19 @@
     "no-duplicate-imports": [
       "error"
     ],
-    "no-shadow": [
-      "off"
-    ],
-    "@typescript-eslint/no-shadow": [
-      "error"
-    ],
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "error",
     "key-spacing": [
       "error"
     ],
     "no-multiple-empty-lines": [
       "error"
     ],
-    "@typescript-eslint/no-floating-promises": [
-      "error"
-    ],
+    "@typescript-eslint/no-floating-promises": "error",
     "no-return-await": [
       "off"
     ],
-    "@typescript-eslint/return-await": [
-      "error"
-    ],
+    "@typescript-eslint/return-await": "error",
     "no-trailing-spaces": [
       "error"
     ],
