--- a/cdk/package.json
+++ b/cdk/package.json
@@ -14,8 +14,8 @@
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.0.3",
+    "@tsconfig/node20": "^20.1.4",
     "@types/async-retry": "^1.4.8",
-    "@types/aws-lambda": "^8.10.132",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.10",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
@@ -51,6 +51,7 @@
     "@aws-sdk/client-ses": "3.525.0",
     "@aws-sdk/client-sns": "3.525.0",
     "@aws-sdk/client-ssm": "3.525.0",
+    "@types/aws-lambda": "^8.10.132",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.137.0",
     "axios": "^1.6.8",
