chore: set noEmit to true in tsconfig as recommended

--- a/cdk/tsconfig.json
+++ b/cdk/tsconfig.json
@@ -9,7 +9,7 @@
     "declaration": true,
     "experimentalDecorators": true,
     "sourceMap": true,
-    "noEmitOnError": false,
+    "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
