--- a/cdk/package.json
+++ b/cdk/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.0.3",
+    "@stylistic/eslint-plugin": "^1.7.2",
     "@types/async-retry": "^1.4.8",
     "@types/aws-lambda": "^8.10.132",
     "@types/jest": "^29.5.11",
@@ -55,6 +56,7 @@
     "aws-cdk-lib": "^2.137.0",
     "axios": "^1.6.8",
     "cdk-assets": "^2.137.0",
+    "cdk-nag": "^2.28.89",
     "constructs": "^10.3.0",
     "endent": "^2.1.0",
     "handlebars": "^4.7.8",
