--- a/cdk/package.json
+++ b/cdk/package.json
@@ -18,6 +18,7 @@
     "@types/aws-lambda": "^8.10.132",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.10",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "aws-sdk-client-mock": "^3.0.1",
@@ -51,6 +52,8 @@
     "@aws-sdk/client-ses": "3.525.0",
     "@aws-sdk/client-sns": "3.525.0",
     "@aws-sdk/client-ssm": "3.525.0",
+    "@aws-sdk/client-route-53": "3.525.0",
+    "@aws-sdk/client-workmail": "3.525.0",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.115.0",
     "axios": "^1.6.7",
@@ -58,6 +61,7 @@
     "constructs": "^10.1.224",
     "endent": "^2.1.0",
     "handlebars": "^4.7.8",
+    "uuid": "^9.0.1",
     "uuid4": "^2.0.3",
     "yaml": "^2.4.1"
   },
