--- a/cdk/package.json
+++ b/cdk/package.json
@@ -8,8 +8,8 @@
     "test": "make test && jest --silent",
     "publish-assets": "npx ts-node -P tsconfig.json --prefer-ts-exts src/scripts/publish-assets.ts",
     "prepare": "cd .. && husky cdk/.husky",
-    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "format": "prettier --write ."
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --fix",
+    "format": "prettier --write --ignore-unknown ."
   },
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
@@ -41,8 +41,8 @@
     "typescript": "^5.3.3"
   },
   "lint-staged": {
-    "*.{ts,tsx,js}": "yarn lint",
-    "*.css": "yarn format"
+    "*.{ts,tsx,js}": "eslint --fix",
+    "*.{json,js,ts,jsx,tsx,html}": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.137.0-alpha.0",
