--- a/cdk/package.json
+++ b/cdk/package.json
@@ -21,8 +21,8 @@
     "@types/node": "^20.11.10",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
-    "aws-sdk-client-mock": "^3.0.1",
-    "aws-sdk-client-mock-jest": "^3.0.1",
+    "aws-sdk-client-mock": "^4.0.0",
+    "aws-sdk-client-mock-jest": "^4.0.0",
     "esbuild": "^0.20.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -45,13 +45,17 @@
     "*.{json,js,ts,jsx,tsx,html}": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda-python-alpha": "^2.137.0-alpha.0",
-    "@aws-sdk/client-cloudwatch": "3.525.0",
-    "@aws-sdk/client-eventbridge": "3.525.0",
-    "@aws-sdk/client-organizations": "3.525.0",
-    "@aws-sdk/client-ses": "3.525.0",
-    "@aws-sdk/client-sns": "3.525.0",
-    "@aws-sdk/client-ssm": "3.525.0",
+    "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
+    "@aws-sdk/client-cloudwatch": "3.540.0",
+    "@aws-sdk/client-controltower": "3.540.0",
+    "@aws-sdk/client-eventbridge": "3.540.0",
+    "@aws-sdk/client-organizations": "3.540.0",
+    "@aws-sdk/client-securityhub": "3.540.0",
+    "@aws-sdk/client-ses": "3.540.0",
+    "@aws-sdk/client-sns": "3.540.0",
+    "@aws-sdk/client-ssm": "3.540.0",
+    "@aws-sdk/client-sts": "3.540.0",
+    "@aws-sdk/credential-provider-node": "3.540.0",
     "@types/aws-lambda": "^8.10.132",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.137.0",
@@ -60,6 +64,7 @@
     "cdk-nag": "^2.28.89",
     "constructs": "^10.3.0",
     "endent": "^2.1.0",
+    "exponential-backoff": "^3.1.1",
     "handlebars": "^4.7.8",
     "uuid4": "^2.0.3",
     "yaml": "^2.4.1"
