--- a/cdk/package.json
+++ b/cdk/package.json
@@ -66,7 +66,9 @@
     "cdk-assets": "^2.137.0",
     "cdk-nag": "^2.28.89",
     "constructs": "^10.3.0",
+    "deasync": "^0.1.29",
     "endent": "^2.1.0",
+    "ews-javascript-api": "^0.15.3",
     "exponential-backoff": "^3.1.1",
     "handlebars": "^4.7.8",
     "uuid": "^9.0.1",
