--- a/cdk/package.json
+++ b/cdk/package.json
@@ -48,8 +48,11 @@
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
     "@aws-sdk/client-cloudwatch": "3.540.0",
     "@aws-sdk/client-controltower": "3.540.0",
+    "@aws-sdk/client-ec2": "^3.583.0",
     "@aws-sdk/client-eventbridge": "3.540.0",
+    "@aws-sdk/client-iam": "^3.583.0",
     "@aws-sdk/client-organizations": "3.540.0",
+    "@aws-sdk/client-s3-control": "^3.590.0",
     "@aws-sdk/client-securityhub": "3.540.0",
     "@aws-sdk/client-ses": "3.540.0",
     "@aws-sdk/client-sns": "3.540.0",
@@ -62,6 +65,7 @@
     "axios": "^1.6.8",
     "cdk-assets": "^2.137.0",
     "cdk-nag": "^2.28.89",
+    "cdk-stacksets": "^0.0.150",
     "constructs": "^10.3.0",
     "endent": "^2.1.0",
     "exponential-backoff": "^3.1.1",
