chore: group aws-sdk dependencies in dependabot (#523)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,10 @@ updates:
     directory: "cdk/"
     schedule:
       interval: "weekly"
+    groups:
+      aws-sdk:
+        patterns:
+          - "@aws-sdk/*"
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
