chore: group development dependencies in dependabot (#531)
* chore: group development dependencies in dependabot

* chore: update dependabot open PR limit to 10

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,9 @@ updates:
       aws-sdk:
         patterns:
           - "@aws-sdk/*"
+      development:
+        dependency-type: "development"
+    open-pull-requests-limit: 10
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
