--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,9 @@ updates:
           - "@aws-sdk/*"
       development:
         dependency-type: "development"
+        update-types:
+          - "minor"
+          - "patch"
     open-pull-requests-limit: 10
   - package-ecosystem: "pip"
     directory: "/"
