--- a/cdk/package.json
+++ b/cdk/package.json
@@ -48,18 +48,18 @@
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
     "@aws-sdk/client-cloudwatch": "3.540.0",
     "@aws-sdk/client-controltower": "3.540.0",
-    "@aws-sdk/client-ec2": "^3.583.0",
+    "@aws-sdk/client-ec2": "3.540.0",
     "@aws-sdk/client-eventbridge": "3.540.0",
-    "@aws-sdk/client-iam": "^3.583.0",
+    "@aws-sdk/client-iam": "3.540.0",
     "@aws-sdk/client-organizations": "3.540.0",
-    "@aws-sdk/client-s3-control": "^3.590.0",
+    "@aws-sdk/client-s3-control": "3.540.0",
     "@aws-sdk/client-securityhub": "3.540.0",
     "@aws-sdk/client-ses": "3.540.0",
     "@aws-sdk/client-sns": "3.540.0",
     "@aws-sdk/client-ssm": "3.540.0",
     "@aws-sdk/client-sts": "3.540.0",
     "@aws-sdk/credential-provider-node": "3.540.0",
-    "@types/aws-lambda": "^8.10.132",
+    "@types/aws-lambda": "^8.10.138",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.137.0",
     "axios": "^1.6.8",
