--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,9 @@ updates:
       aws-sdk:
         patterns:
           - "@aws-sdk/*"
+      typescript-eslint:
+        patterns:
+          - "@typescript-eslint/*"
       development:
         dependency-type: "development"
         update-types:
