fix: backup policy validation error

--- a/templates/backup.yaml
+++ b/templates/backup.yaml
@@ -793,7 +793,7 @@ Resources:
                     "rules": {
                         "backup-daily": {
                             "schedule_expression": {
-                              "@@assign": "cron(0 5 ? * * *)",
+                              "@@assign": "cron(0 5 ? * * *)"
                             },
                             "lifecycle": {
                                 "delete_after_days": {
