fix: remove redundant If statement in template file, cfn-lint finding
this also fixes broken PR validation workflow

--- a/.github/workflows/pr-validation.yaml
+++ b/.github/workflows/pr-validation.yaml
@@ -36,6 +36,7 @@ on:
 # the defaults
 env:
   SUPERWERKER_REGION: eu-central-1
+  AWS_DEFAULT_REGION: eu-central-1
   UPDATE_FROM_LATEST_RELEASE: false
 jobs:
   pr-conventions:
