chore: bumb many packages, fix test broken from jest upgrade

--- a/cdk/package.json
+++ b/cdk/package.json
@@ -12,62 +12,63 @@
     "format": "prettier --write --ignore-unknown ."
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@tsconfig/node20": "^20.1.4",
-    "@stylistic/eslint-plugin": "^2.9.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@stylistic/eslint-plugin": "^5.4.0",
+    "@tsconfig/node20": "^20.1.6",
     "@types/async-retry": "^1.4.9",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^20.14.9",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.5.2",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "aws-sdk-client-mock": "^4.1.0",
     "aws-sdk-client-mock-jest": "^4.1.0",
-    "esbuild": "^0.24.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
+    "esbuild": "^0.25.10",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-node": "^0.3.9",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.6",
-    "jest": "^29.7.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "jest": "^30.1.3",
     "jest-junit": "^16.0.0",
     "json-schema": "^0.4.0",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.3.3",
-    "ts-jest": "^29.2.5",
+    "lint-staged": "^15.5.2",
+    "prettier": "^3.6.2",
+    "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.9.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js}": "eslint --fix",
     "*.{json,js,ts,jsx,tsx,html}": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
-    "@aws-sdk/client-cloudwatch": "3.675.0",
-    "@aws-sdk/client-controltower": "3.675.0",
-    "@aws-sdk/client-eventbridge": "3.675.0",
-    "@aws-sdk/client-organizations": "3.675.0",
-    "@aws-sdk/client-securityhub": "3.675.0",
-    "@aws-sdk/client-ses": "3.675.0",
-    "@aws-sdk/client-sns": "3.675.0",
-    "@aws-sdk/client-ssm": "3.675.0",
-    "@aws-sdk/client-sts": "3.675.0",
-    "@aws-sdk/credential-provider-node": "3.675.0",
-    "@types/aws-lambda": "^8.10.140",
+    "@aws-cdk/aws-lambda-python-alpha": "^2.216.0-alpha.0",
+    "@aws-sdk/client-cloudwatch": "^3.894.0",
+    "@aws-sdk/client-controltower": "^3.894.0",
+    "@aws-sdk/client-eventbridge": "^3.894.0",
+    "@aws-sdk/client-organizations": "^3.894.0",
+    "@aws-sdk/client-securityhub": "^3.894.0",
+    "@aws-sdk/client-ses": "^3.894.0",
+    "@aws-sdk/client-sns": "^3.894.0",
+    "@aws-sdk/client-ssm": "^3.894.0",
+    "@aws-sdk/client-sts": "^3.894.0",
+    "@aws-sdk/credential-provider-node": "^3.894.0",
+    "@types/aws-lambda": "^8.10.152",
     "async-retry": "^1.3.3",
-    "aws-cdk-lib": "^2.162.1",
-    "axios": "^1.7.2",
-    "cdk-assets": "^2.155.14",
-    "cdk-nag": "^2.29.12",
-    "constructs": "^10.3.0",
+    "aws-cdk": "^2.1029.2",
+    "aws-cdk-lib": "^2.216.0",
+    "axios": "^1.12.2",
+    "cdk-assets": "^4.2.0",
+    "cdk-nag": "^2.37.34",
+    "constructs": "^10.4.2",
     "endent": "^2.1.0",
-    "exponential-backoff": "^3.1.1",
+    "exponential-backoff": "^3.1.2",
     "handlebars": "^4.7.8",
     "uuid4": "^2.0.3",
-    "yaml": "^2.4.5"
+    "yaml": "^2.8.1"
   },
   "license": "Apache-2.0",
   "version": "0.0.0"
