feat: silence husky and prepare step

--- a/cdk/package.json
+++ b/cdk/package.json
@@ -1,13 +1,13 @@
 {
   "name": "superwerker-cdk",
   "engines": {
-    "node": "^18 || ^20"
+    "node": "^18 || ^20 || ^22 || ^24"
   },
   "scripts": {
     "synth": "cdk synth --version-reporting false",
     "test": "make test && jest --silent",
     "publish-assets": "npx ts-node -P tsconfig.json --prefer-ts-exts src/scripts/publish-assets.ts",
-    "prepare": "cd .. && husky cdk/.husky",
+    "prepare": "echo prepare is obsolete",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --fix",
     "format": "prettier --write --ignore-unknown ."
   },
@@ -30,7 +30,6 @@
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
-    "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-junit": "^16.0.0",
     "json-schema": "^0.4.0",
